/** @page CHANGES


@section v2_03_dev Changes with libapreq2-2.03-dev

- Documentation [joes]
  CHANGES file reformatted, removing dates & other clutter 
  as Stas suggests.

- C API [joes]
  Rewrote cgi_read() in apreq_env.c and reworked mod_apreq.c 
  to enforce apreq_env_max_body() settings.

- C API [joes]
  Fixed bug in url_parser code- missing context brigade was
  needed to track key-value pairs which span multiple buckets.

- C API [joes]
  API modifications: removed struct apreq_cfg_t, adding
  new apreq_env hooks max_body, max_brigade_len, and temp_dir.
  Also folded apreq_parsers.h into apreq_params.h.  These changes
  make libapreq2.so.2.0.5 incompatible with earlier versions.

- Perl API [stas]
  Include ppport.h from blead-perl to support older perls.
  Add a proper support for ithreads.

- C API [Swen Schillig, joes]
  Fixed bug in calculation of Netscape cookie expiration dates.
  apr_time_t is measured in microseconds, not seconds, which
  threw off the arithmetic; apr_time_from_sec was needed for
  the conversion.

- C API [Max Kellermann]
  Fix segfault caused by invalid %-escape sequence in query string.


@section v2_02_dev Changes with libapreq2-2.02-dev (released Nov 15, 2003)


- Perl API [joes]
  Fix bogus pool/cookie initializers in Apache::Cookie::set_attr(),
  which caused Apache::Cookie::new to segfault.  Bug
  first reported to modperl list by Wolfgang Kubens.


@section v2_01_dev Changes with libapreq2-2.01-dev (released Nov 10, 2003)


- build system [joes]
  Skip Apache::Test tests in env/ when Apache::Test is unavailable.
  This allows the C API to be build and installed without requiring
  Apache::Test (it is still a requirement for compiling the perl glue).

- C API mod_apreq.c [joes]
  Parser errors were creeping into the return value of apreq_filter,
  which breaks the "transparent tee" paradigm.  This caused bogus
  "400 Bad Request" responses (first reported by Vladimir Dudo) 